@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.6 2021/10/26 10:19:13 nia Exp $
-
-BLAKE2s (unittest2-1.1.0.tar.gz) = 1a670ec939b8559574b8b71e325576aedef687a760b468f6240c8a8c8ae31462
-SHA512 (unittest2-1.1.0.tar.gz) = 3fba15728905f437767416ab4fd3573d3fb2319486ef84c52a9fa930ea84aa1f2ae29d6f58993e3509083625790e17b1ef8d9ac5de0e166c254897a3e7a202fa
-Size (unittest2-1.1.0.tar.gz) = 81432 bytes
